--- a/controller_android/app/src/main/res/layout-land/activity_controller.xml
+++ b/controller_android/app/src/main/res/layout-land/activity_controller.xml
@@ -7,12 +7,12 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/activity_controller_joystick_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="48dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -20,6 +20,7 @@
             android:id="@+id/activity_controller_joystick"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:horizontalLayout="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -29,11 +30,12 @@
 
     <LinearLayout
         android:id="@+id/activity_controller_value_x_container"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/activity_controller_joystick_container">
+        app:layout_constraintStart_toEndOf="@id/activity_controller_joystick_container"
+        app:layout_constraintTop_toTopOf="@id/activity_controller_joystick_container">
 
         <TextView
             android:layout_width="wrap_content"
@@ -49,10 +51,11 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="horizontal"
+        app:layout_constraintStart_toEndOf="@id/activity_controller_joystick_container"
         app:layout_constraintTop_toBottomOf="@id/activity_controller_value_x_container">
 
         <TextView
@@ -70,20 +73,20 @@
 
     <Button
         style="@style/ControllerButton"
-        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:backgroundTint="@android:color/holo_red_light"
         android:text="@string/activity_controller_brake"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         style="@style/ControllerButton"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
         android:backgroundTint="@android:color/holo_blue_dark"
         android:text="@string/activity_controller_horn"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
