--- a/controller_android/app/src/main/res/values/attrs.xml
+++ b/controller_android/app/src/main/res/values/attrs.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <declare-styleable name="Joystick">
-        <attr name="onChange" format="reference"/>
+        <attr name="horizontalLayout" format="boolean"/>
     </declare-styleable>
 </resources>
