--- a/controller_android/app/src/main/res/layout/activity_device_list.xml
+++ b/controller_android/app/src/main/res/layout/activity_device_list.xml
@@ -14,7 +14,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:orientation="horizontal"
         android:padding="5dp"
         app:layout_constraintBottom_toBottomOf="@+id/activity_device_list_recycler">
