Send button values to the car

--- a/controller_android/app/src/main/res/layout/activity_controller.xml
+++ b/controller_android/app/src/main/res/layout/activity_controller.xml
@@ -69,6 +69,7 @@
     </LinearLayout>
 
     <Button
+        android:id="@+id/activity_controller_button_brake"
         style="@style/ControllerButton"
         android:layout_marginStart="16dp"
         android:layout_marginBottom="16dp"
@@ -78,6 +79,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
+        android:id="@+id/activity_controller_button_horn"
         style="@style/ControllerButton"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
