--- a/controller_android/app/src/main/res/layout-land/activity_controller.xml
+++ b/controller_android/app/src/main/res/layout-land/activity_controller.xml
@@ -72,6 +72,7 @@
     </LinearLayout>
 
     <Button
+        android:id="@+id/activity_controller_button_brake"
         style="@style/ControllerButton"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
@@ -81,6 +82,7 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
+        android:id="@+id/activity_controller_button_horn"
         style="@style/ControllerButton"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
